@@ -132,7 +132,7 @@
     <string id="30173">Scraper settings</string>
     <string id="30174">Scan settings</string>
     <string id="30175">Disable LIRC (Linux)</string>
-    <string id="30176">Hide launchers and items marked as finished</string>
+    <string id="30176">Hide categories/launchers/items marked as finished</string>
     <string id="30177">Prefered images</string>
     <string id="30178">Snapshots</string>
     <string id="30179">Flyers</string>
